--- a/assets/style.css
+++ b/assets/style.css
@@ -47,6 +47,7 @@ textarea {
 
 .saveBtn {
   border-left: 1px solid black;
+
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
@@ -55,5 +56,8 @@ textarea {
 
 .saveBtn i:hover {
   font-size: 20px;
+
+  padding:8px;
   transition: all 0.3s ease-in-out;
 }
+
